--- a/docker-compose-mktxp-stack.yml
+++ b/docker-compose-mktxp-stack.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 networks:
-  mktxp: {}
+  monitoring: {}
 
 services:
   mktxp:
@@ -9,13 +9,14 @@ services:
     image: ghcr.io/akpw/mktxp:latest
     user: root
     volumes:
-      - './mktxp/:/root/mktxp/'
+      - /share/container_data/monitoring/mktxp/:/root/mktxp/
     networks:
-      mktxp: null
-    restart: unless-stopped  
+      monitoring: null
+    restart: unless-stopped
 
   grafana:
     container_name: grafana
+    user: "1000"
     environment:
       GF_AUTH_ANONYMOUS_ENABLED: "true"
       GF_AUTH_ANONYMOUS_ORG_ROLE: Admin
@@ -26,81 +27,81 @@ services:
       GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH: /var/lib/grafana/dashboards/mikrotik/mikrotik_mktxp_exporter.json
     image: grafana/grafana:latest
     networks:
-      mktxp: null
+      monitoring: null
     ports:
-    - protocol: tcp
-      published: 3000
-      target: 3000
-    restart: always
+      - protocol: tcp
+        published: 3000
+        target: 3000
+    restart: unless-stopped
     volumes:
-    - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
-    - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
-    - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - /share/container_data/monitoring/grafana:/var/lib/grafana
+      - /share/container_data/monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+      - /share/container_data/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
 
   loki:
     command: -config.file=/etc/loki/loki-config.yml
     container_name: loki
     image: grafana/loki:latest
     networks:
-      mktxp: null
+      monitoring: null
     ports:
-    - protocol: tcp
-      published: 3100
-      target: 3100
-    restart: always
+      - protocol: tcp
+        published: 3100
+        target: 3100
+    restart: unless-stopped
     volumes:
-    - ./loki/loki-config.yml:/etc/loki/loki-config.yml
+      - /share/container_data/monitoring/loki/loki-config.yml:/etc/loki/loki-config.yml
 
   prometheus:
     command:
-    - --config.file=/etc/prometheus/prometheus.yml
-    - --storage.tsdb.path=/prometheus
-    - --web.enable-admin-api
-    - --web.enable-lifecycle
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.enable-admin-api
+      - --web.enable-lifecycle
     container_name: prometheus
     image: prom/prometheus:latest
     networks:
-      mktxp: null
+      monitoring: null
     ports:
-    - published: 9090
-      target: 9090
-    restart: always
+      - published: 9090
+        target: 9090
+    restart: unless-stopped
     volumes:
-    - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - /share/container_data/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
 
   promtail:
     command: -config.file=/etc/promtail/promtail-config.yml
     container_name: promtail
     image: grafana/promtail:latest
     networks:
-      mktxp: null
+      monitoring: null
     ports:
-    - protocol: tcp
-      published: 1514
-      target: 1514
-    - protocol: tcp
-      published: 9080
-      target: 9080
-    restart: always
+      - protocol: tcp
+        published: 1514
+        target: 1514
+      - protocol: tcp
+        published: 9080
+        target: 9080
+    restart: unless-stopped
     volumes:
-    - ./promtail/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
+      - /share/container_data/monitoring/promtail/:/etc/promtail/promtail-config.yml:ro
 
   syslog-ng:
     command: -edv
     container_name: syslog-ng
     depends_on:
-    - promtail
+      - promtail
     image: balabit/syslog-ng:latest
     networks:
-      mktxp: null
+      monitoring: null
     ports:
-    - protocol: udp
-      published: 514
-      target: 514
-    - protocol: tcp
-      published: 601
-      target: 601
+      - protocol: udp
+        published: 514
+        target: 514
+      - protocol: tcp
+        published: 601
+        target: 601
     restart: always
     volumes:
-    - ./syslog-ng/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
+      - /share/container_data/monitoring/syslog-ng/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
 
