--- a/mktxp/mktxp.conf
+++ b/mktxp/mktxp.conf
@@ -11,18 +11,18 @@
 ## GNU General Public License for more details.
 
 
-[Sample-Router]
-    # for specific configuration on the router level, change here the defaults values from below
-    hostname = 192.168.88.1
+# [Sample-Router]
+#     # for specific configuration on the router level, change here the defaults values from below
+#     hostname = 192.168.88.1
 
 [default]
     # this affects configuration of all routers, unless overloaded on their specific levels
 
     enabled = True          # turns metrics collection for this RouterOS device on / off
-    hostname = localhost    # RouterOS IP address
+    hostname = 10.3.0.1    # RouterOS IP address
     port = 8728             # RouterOS IP Port
     
-    username = username     # RouterOS user, needs to have 'read' and 'api' permissions
+    username = mkstack     # RouterOS user, needs to have 'read' and 'api' permissions
     password = password
     
     use_ssl = False                 # enables connection via API-SSL servis
@@ -35,7 +35,7 @@
     dhcp_lease = True               # DHCP lease metrics
 
     connections = True              # IP connections metrics
-    connection_stats = False        # Open IP connections metrics 
+    connection_stats = True        # Open IP connections metrics 
 
     pool = True                     # Pool metrics
     interface = True                # Interfaces traffic metrics
@@ -44,21 +44,21 @@
     ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
     ipv6_neighbor = False           # Reachable IPv6 Neighbors
 
-    poe = True                      # POE metrics
+    poe = False                      # POE metrics
     monitor = True                  # Interface monitor metrics
     netwatch = True                 # Netwatch metrics
     public_ip = True                # Public IP metrics
-    route = True                    # Routes metrics
-    wireless = True                 # WLAN general metrics
-    wireless_clients = True         # WLAN clients metrics
-    capsman = True                  # CAPsMAN general metrics
-    capsman_clients = True          # CAPsMAN clients metrics    
+    route = False                    # Routes metrics
+    wireless = False                 # WLAN general metrics
+    wireless_clients = False         # WLAN clients metrics
+    capsman = False                  # CAPsMAN general metrics
+    capsman_clients = False          # CAPsMAN clients metrics    
 
     kid_control_assigned = False    # Allow Kid Control metrics for connected devices with assigned users
     kid_control_dynamic = False     # Allow Kid Control metrics for all connected devices, including those without assigned user
 
     user = True                     # Active Users metrics
-    queue = True                    # Queues metrics
+    queue = False                    # Queues metrics
 
     bgp = False                     # BGP sessions metrics
     
