--- a/promtail/promtail-config.yml
+++ b/promtail/promtail-config.yml
@@ -10,22 +10,37 @@ clients:
 
 scrape_configs:
 
-- job_name: syslog
-  syslog:
-    listen_address: 0.0.0.0:1514
-    idle_timeout: 60s
-    label_structured_data: yes
-    labels:
-      job: "syslog"
-  relabel_configs:
-    - source_labels: ['__syslog_message_hostname']
-      target_label: 'routerboard'
-    - source_labels: ['__syslog_connection_hostname']
-      target_label: 'syslog_host'
+  - job_name: system
+    static_configs:
+    - targets:
+        - "localhost"
+      labels:
+        job: varlogs
+        __path__: /var/log/*log
 
-#    - source_labels: ['__syslog_connection_ip_address']
-#      target_label: 'syslog_host_ip'
-#    - source_labels: ['__syslog_message_severity']
-#     target_label: 'severity'
-#    - source_labels: ['__syslog_message_facility']
-#      target_label: 'facility'
+  - job_name: docker
+    pipeline_stages:
+      - docker: {}
+    static_configs:
+      - labels:
+          job: docker
+          __path__: /var/lib/docker/containers/*/*-json.log
+
+  - job_name: syslog
+    syslog:
+      listen_address: 0.0.0.0:1514
+      idle_timeout: 60s
+      label_structured_data: yes
+      labels:
+        job: "syslog"
+    relabel_configs:
+      - source_labels: ['__syslog_message_hostname']
+        target_label: 'mikrotik'
+      - source_labels: ['__syslog_connection_hostname']
+        target_label: 'syslog_host'
+      - source_labels: ['__syslog_connection_ip_address']
+        target_label: 'syslog_host_ip'
+      - source_labels: ['__syslog_message_severity']
+        target_label: 'severity'
+      - source_labels: ['__syslog_message_facility']
+        target_label: 'facility'
