--- a/mktxp/mktxp.conf
+++ b/mktxp/mktxp.conf
@@ -11,15 +11,15 @@
 ## GNU General Public License for more details.
 
 
-# [Sample-Router]
-#     # for specific configuration on the router level, change here the defaults values from below
-#     hostname = 192.168.88.1
+[mikrotik]
+    # for specific configuration on the router level, change here the defaults values from below
+    hostname = 10.3.0.1
 
 [default]
     # this affects configuration of all routers, unless overloaded on their specific levels
 
     enabled = True          # turns metrics collection for this RouterOS device on / off
-    hostname = 10.3.0.1    # RouterOS IP address
+    hostname = localhost    # RouterOS IP address
     port = 8728             # RouterOS IP Port
     
     username = mkstack     # RouterOS user, needs to have 'read' and 'api' permissions
