add kid kontrol and routes

--- a/mktxp/mktxp.conf
+++ b/mktxp/mktxp.conf
@@ -48,14 +48,14 @@
     monitor = True                  # Interface monitor metrics
     netwatch = True                 # Netwatch metrics
     public_ip = True                # Public IP metrics
-    route = False                    # Routes metrics
+    route = True                    # Routes metrics
     wireless = False                 # WLAN general metrics
     wireless_clients = False         # WLAN clients metrics
     capsman = False                  # CAPsMAN general metrics
     capsman_clients = False          # CAPsMAN clients metrics    
 
-    kid_control_assigned = False    # Allow Kid Control metrics for connected devices with assigned users
-    kid_control_dynamic = False     # Allow Kid Control metrics for all connected devices, including those without assigned user
+    kid_control_assigned = True    # Allow Kid Control metrics for connected devices with assigned users
+    kid_control_dynamic = True     # Allow Kid Control metrics for all connected devices, including those without assigned user
 
     user = True                     # Active Users metrics
     queue = False                    # Queues metrics
